--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -15,7 +15,7 @@
     <div class="body">
       <div class="content">
         <div class='about'>
-          I am a recent graduate from Angelo State University with a degree in Computer Science. I have many loves in this life. I love electronics, programming, camping, hiking, hammocking, movies, books, and archery. I am all these things, but I am more. This is just a fraction of what, and who I am.
+          I am a graduate from Angelo State University with a degree in Computer Science. I have many loves in this life. I love electronics, programming, camping, hiking, hammocking, movies, books, and archery. I am all these things, but I am more. This is just a fraction of what, and who I am.
           <br><br>
           <b>Why am I interested in programming?</b>
           <br>
