fixed problem with mobile dropdown

--- a/views/pages/resume.ejs
+++ b/views/pages/resume.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <% include ../partials/header_tag_manager %>
-		<div id="navbar">
+    <div id="navbar-container">
         <% include ../partials/header %>
     </div>
     <div class="body">
