--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <% include ../partials/header_tag_manager %>
-    <div id="navbar">
+    <div id="navbar-container">
         <% include ../partials/header %>
     </div>
 
