--- a/views/pages/reset.ejs
+++ b/views/pages/reset.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <% include ../partials/header_tag_manager %>
-    <div id="navbar">
+    <div id="navbar-container">
         <% include ../partials/header %>
     </div>
     <div class="body">
