--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,10 @@
 <!-- views/partials/footer.ejs -->
-
 <footer>
-  <p>Copyright &copy;2016</p>
+    <p class="pull-left">&copy; 2017</p>
+    <div class="pull-right">
+      <ul class="list-inline">
+        <li><a href="https://www.linkedin.com/in/lhaley2011/"><i class="fa fa-linkedin fa-2x fa-border"></i></a></li>
+        <li><a href="https://github.com/lhaley2011/"><i class="fa fa-github fa-2x fa-border"></i></a></li>
+      </ul>
+    </div>
 </footer>
