hostname as console.log(), to test multiple docker containers in production

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -5,6 +5,9 @@
 <head>
     <% include ../partials/head_tag_manager %>
     <% include ../partials/head %>
+    <script>
+        console.log("<%= hostname %>");
+    </script>
 </head>
 <body>
     <% include ../partials/header_tag_manager %>
