--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -20,16 +20,13 @@
 <meta name="twitter:description" content="Personal Website" />
 <meta name="twitter:site" content />
 <link rel="SHORTCUT ICON" href="/favicon.ico">
-<link rel="stylesheet" id="font-awesome-css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" type="text/css" media="screen">
+<link rel="stylesheet" href="/styles/font-awesome.min.css" type="text/css">
 <link rel="stylesheet" href="/styles/dependencies/bootstrap-theme.css">
 <link rel="stylesheet" href="/styles/dependencies/bootstrap.css">
 <link rel="stylesheet" href="/styles/index.css">
 <link rel="stylesheet" href="/styles/scrollToTop.css">
 
-<script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
+<script src="/js/jquery-3.2.1.min.js"></script>
 <script src="/js/dependencies/bootstrap.js"></script>
 <script src="/js/navbar-highlight.js"></script>
 <script src="/js/scrollToTop.js"></script>
